--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.loginForm {
+  border: 1px solid #ddd;
+  width: 40%;
+  margin: 100px auto;
+  padding: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+label{
+  font-weight: 600;
+}
+
+input[type=email], input[type=password] {
+  width: 500px;
+  padding: 12px 12px;
+  margin: 12px 0;
+  display: inline-block;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+}
+
+input[type=email]:focus-visible, input[type=password]:focus-visible{
+  outline: 1px solid #605dba;
+  border-radius: 3px;
+}
+
+.error{
+  color: red;
+}
+
+button {
+  background-color: #605dba;
   color: white;
+  padding: 14px 20px;
+  margin: 10px 0;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.link{
+  text-decoration: none;
+  color: #605dba;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.link:hover{
+  text-decoration: underline #605dba;
 }
